--- a/services/api-gateway/ApiGateway.Api/ApiGateway.Api.csproj
+++ b/services/api-gateway/ApiGateway.Api/ApiGateway.Api.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
+    <PackageReference Include="Ocelot" Version="24.0.1" />
   </ItemGroup>
 
 </Project>
