--- a/services/ingestion/src/Ingestion.Infrastructure/Ingestion.Infrastructure.csproj
+++ b/services/ingestion/src/Ingestion.Infrastructure/Ingestion.Infrastructure.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
+    <PackageReference Include="Npgsql" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Ingestion.Domain\Ingestion.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
