feat: create publisher and outbox hosted service

--- a/platform/.env.example
+++ b/platform/.env.example
@@ -1,7 +1,13 @@
 ﻿# =========================
-# Ambiente ASP.NET
+# Ingestion Service
 # =========================
 ASPNETCORE_ENVIRONMENT=Development
+ConnectionStrings__IngestionDatabase=
+ConnectionStrings__Redis=
+ConnectionStrings__Kafka=
+MinIO__Host=
+MinIO__AccessKey=
+MinIO__SecretKey=
 
 # =========================
 # PostgreSQL
