--- a/platform/docker-compose.yml
+++ b/platform/docker-compose.yml
@@ -7,6 +7,12 @@
     container_name: api-gateway
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__IngestionDatabase=${ConnectionStrings__IngestionDatabase}
+      - ConnectionStrings__Redis=${ConnectionStrings__Redis}
+      - ConnectionStrings__Kafka=${ConnectionStrings__Kafka}
+      - MinIO__Host=${MinIO__Host}
+      - MinIO__AccessKey=${MinIO__AccessKey}
+      - MinIO__SecretKey=${MinIO__SecretKey}
     ports:
       - "7000:8080"
     restart: unless-stopped
@@ -26,6 +32,7 @@
       - postgres
       - redis
       - minio
+      - kafka
     restart: unless-stopped
     networks:
       - sentinel-network
@@ -65,6 +72,35 @@
       - "9001:9001"
     volumes:
       - minio-data:/data
+    restart: unless-stopped
+    networks:
+      - sentinel-network
+  kafka:
+    image: confluentinc/cp-kafka:7.6.0
+    container_name: kafka
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT//kafka:9092,PLAINTEXT_HOST://localhost:29092
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      - KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+    depends_on:
+      - zookeeper
+    restart: unless-stopped
+    networks:
+      - sentinel-network
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.6.0
+    container_name: zookeeper
+    environment:
+      - ZOOKEEPER_CLIENT_PORT=2181
+      - ZOOKEEPER_TICK_TIME=2000
+    ports:
+      - "2181:2181"
     restart: unless-stopped
     networks:
       - sentinel-network
